--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
             </li>
 
             <li class="nav-item">
-                <button routerLink="department"
+                <button routerLink="employee"
                 class="m-1 btn btn-outline-primary" Button>Employees</button>
             </li>
         </ul>
