--- a/src/app/employee/add-edit-emp/add-edit-emp.component.html
+++ b/src/app/employee/add-edit-emp/add-edit-emp.component.html
@@ -1,1 +1,96 @@
-<p>add-edit-emp works!</p>
+<!-- <p>add-edit-emp works!</p> -->
+<div class="d-flex flex-row bd-highlight mb-2">
+
+<div class="form-group row" style="width: 80%;">
+
+    <label class="col-sm-2 col-form-label">FirstName</label>
+<div class="col-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="FirstName"
+    placeholder="Enter First Name" pattern="[a-zA-Z]{1,45}" required>
+</div>
+<br>
+<label class="col-sm-2 col-form-label">LastName</label>
+<div class="col-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="LastName"
+    placeholder="Enter First Name" pattern="[a-zA-Z]{1,45}" required>
+</div>
+<br>
+<label class="col-sm-2 col-form-label">Designation</label>
+<div class="col-sm-10">
+    <select [(ngModel)]="Designation" class="form-control">
+        <option *ngFor="let deptName of AllDepartments" [value]="Designation">{{deptName.Designation}}</option>
+    </select>
+</div>
+<br>
+<label class="col-sm-2 col-form-label">DateofJoining</label>
+<div class="col-sm-10">
+    <input type="date" class="form-control" [(ngModel)]="DateOfJoining"
+    placeholder="Enter Date of Joining" required>
+</div>
+<br>
+<label class="col-sm-2 col-form-label">ReportingManagerEmployeeId</label>
+<div class="col-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="ReportingManagerEmployeeId"
+    placeholder="Enter Manager Id" pattern="[0-9]{1,3}" required>
+</div>
+<br>
+<label class="col-sm-2 col-form-label">Gender</label>
+<div class="col-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="Gender"
+    placeholder="Enter First Name" pattern="[a-zA-Z]{1,10}" required>
+</div>
+<br>
+<label class="col-sm-2 col-form-label">EmployeeAddress</label>
+<div class="col-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="EmployeeAddress"
+    placeholder="Enter First Name" pattern="[a-zA-Z]{1,150}" required>
+</div>
+<br>
+<label class="col-sm-2 col-form-label">State</label>
+<div class="col-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="State"
+    placeholder="Enter First Name" pattern="[a-zA-Z]{1,50}" required>
+</div>
+<br>
+<label class="col-sm-2 col-form-label">Country</label>
+<div class="col-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="Country"
+    placeholder="Enter First Name" pattern="[a-zA-Z]{1,45}" required>
+</div>
+<br>
+<label class="col-sm-2 col-form-label">Pincode</label>
+<div class="col-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="Pincode"
+    placeholder="Enter Country Zipcode" pattern="[0-9]{5}" required>
+</div>
+<br>
+<label class="col-sm-2 col-form-label">DepartmentId</label>
+<div class="col-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="DepartmentId"
+    placeholder="Enter Manager Id" pattern="[0-9]{1,7}" required>
+</div>
+<br>
+<label class="col-sm-2 col-form-label">IsActive</label>
+<div class="col-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="IsActive"
+    placeholder="Enter Manager Id" pattern="[0-9]{1,1}" required>
+</div>
+<br>
+    <!-- <label class="col-sm-2 col-form-label">Designation</label>
+    <div class="col-sm-10">
+        <input type="text" class="form-control" [(ngModel)]="Department">
+        <option>--Select--</option>
+        <option *ngFor="let deptName of AllDepartments"></option>
+        {{deptName.Designation}}
+    </div> -->
+    
+</div>
+</div>
+
+<button (click)="addEmployee()" *ngIf="emp.EmployeeId==0" class="btn btn-primary">
+    Add
+</button>
+
+<button (click)="updateEmployee()" *ngIf="emp.EmployeeId!=0" class="btn btn-primary">
+    Update
+</button>
